// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Badge Bordi Arrotondati 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <span
        className="mr-1 badge badge-primary badge-pill"
      >
        Primary
      </span>
      <span
        className="mr-1 badge badge-secondary badge-pill"
      >
        Secondary
      </span>
      <span
        className="mr-1 badge badge-tertiary badge-pill"
      >
        Tertiary
      </span>
      <span
        className="mr-1 badge badge-quaternary badge-pill"
      >
        Quaternary
      </span>
      <span
        className="mr-1 badge badge-success badge-pill"
      >
        Success
      </span>
      <span
        className="mr-1 badge badge-danger badge-pill"
      >
        Danger
      </span>
      <span
        className="mr-1 badge badge-warning badge-pill"
      >
        Warning
      </span>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Badge Con Link 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <a
        className="mr-1 badge badge-primary"
        href="#"
      >
        Primary
      </a>
      <a
        className="mr-1 badge badge-secondary"
        href="#"
      >
        Secondary
      </a>
      <a
        className="mr-1 badge badge-tertiary"
        href="#"
      >
        Tertiary
      </a>
      <a
        className="mr-1 badge badge-quaternary"
        href="#"
      >
        Quaternary
      </a>
      <a
        className="mr-1 badge badge-success"
        href="#"
      >
        Success
      </a>
      <a
        className="mr-1 badge badge-danger"
        href="#"
      >
        Danger
      </a>
      <a
        className="mr-1 badge badge-warning"
        href="#"
      >
        Warning
      </a>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Badge Contatore 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      aria-label={null}
      className="btn btn-primary"
      onClick={[Function]}
    >
      Notifiche 
      <span
        className="badge badge-light"
      >
        4
      </span>
    </button>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Badge Esempi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <h1>
        Titolo di esempio 
        <span
          className="badge badge-secondary"
        >
          New
        </span>
      </h1>
      <h2>
        Titolo di esempio 
        <span
          className="badge badge-secondary"
        >
          New
        </span>
      </h2>
      <h3>
        Titolo di esempio 
        <span
          className="badge badge-secondary"
        >
          New
        </span>
      </h3>
      <h4>
        Titolo di esempio 
        <span
          className="badge badge-secondary"
        >
          New
        </span>
      </h4>
      <h5>
        Titolo di esempio 
        <span
          className="badge badge-secondary"
        >
          New
        </span>
      </h5>
      <h6>
        Titolo di esempio 
        <span
          className="badge badge-secondary"
        >
          New
        </span>
      </h6>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Badge Esempi Interattivi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <p>
      Testo di esempio
      <span
        className="mx-1 badge badge-primary badge-pill"
      >
        
        primary
      </span>
    </p>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Badge Variazioni 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <span
        className="mr-1 badge badge-primary"
      >
        Primary
      </span>
      <span
        className="mr-1 badge badge-secondary"
      >
        Secondary
      </span>
      <span
        className="mr-1 badge badge-tertiary"
      >
        Tertiary
      </span>
      <span
        className="mr-1 badge badge-quaternary"
      >
        Quaternary
      </span>
      <span
        className="mr-1 badge badge-success"
      >
        Success
      </span>
      <span
        className="mr-1 badge badge-danger"
      >
        Danger
      </span>
      <span
        className="mr-1 badge badge-warning"
      >
        Warning
      </span>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
